--- a/ansible/roles/prepare_server/handlers/main.yml
+++ b/ansible/roles/prepare_server/handlers/main.yml
@@ -1,19 +1,19 @@
 ---
 # handlers file for prepare_host
 
-- name: "stop nginx"
+- name: stop nginx
   ansible.builtin.systemd:
     name: "nginx"
     state: "stopped"
     enabled: "no"
 
-- name: "start nginx"
+- name: start nginx
   ansible.builtin.systemd:
     name: "nginx"
     state: "started"
     enabled: "yes"
 
-- name: "restart nginx"
+- name: restart nginx
   ansible.builtin.systemd:
     name: "nginx"
     state: "restarted"
