--- a/ansible/roles/prepare_server/tasks/main.yml
+++ b/ansible/roles/prepare_server/tasks/main.yml
@@ -5,3 +5,5 @@
   when: nginx_version == true
 - include_tasks: prepare_server.yml
   when: nginx_remove == false
+- include_tasks: uninstall_nginx.yml
+  when: nginx_remove == true
