--- a/ansible/roles/prepare_server/tasks/prepare_server.yml
+++ b/ansible/roles/prepare_server/tasks/prepare_server.yml
@@ -1,8 +1,8 @@
 ---
 
-- name: "Installing & configuring pkgs for new server"
+- name: installing & configuring pkgs for new server
   block:
-    - name: "Installing pkgs"
+    - name: installing pkgs
       ansible.builtin.apt:
           name: 
           - "nginx"
@@ -11,19 +11,23 @@
           update_cache: true
       become: true
 
-    - name: "Creating nginx dirs"
+    - name: creating nginx dirs
       ansible.builtin.file:
         path: "{{ item }}"
         state: directory
+        owner: "ubuntu1"
+        group: "ubuntu1" 
+        mode: "0755"
+      become: true
       with_items:
         - "/etc/nginx"
         - "/var/log/nginx"
         - "/data/nginx"
+        - "/var/www/html"
         # - "/home/ubuntu1/kekdir"
       notify:
       - start nginx
-      become: true
-      when: check_nginx_version.stdout.find('nginx/') != -1
+#     when: check_nginx_version.stdout.find('nginx/') != -1
 #     when: check_nginx_version.stdout.find('nginx') != -1 #version is empty - dir will be created
 #     when: check_nginx_version.stdout.find('nginx') != 1 #version is NOT empty - dir will not be created
 
