--- a/ansible/roles/tests/tasks/remove_dirs.yml
+++ b/ansible/roles/tests/tasks/remove_dirs.yml
@@ -3,6 +3,6 @@
     path: "{{ item }}"
     state: absent
   with_items:
-  - /home/ubuntu1/dir1
-  - /home/ubuntu1/dir2
+  - /home/izuna/dir1
+  - /home/izuna/dir2
   become: true
