--- a/nginx/tests/nginx.conf
+++ b/nginx/tests/nginx.conf
@@ -11,4 +11,11 @@ http{
 }
 
 #streams
+stream {
+    log_format                  basic   '[$time_local] $upstream_addr $remote_addr '
+                                        '$protocol $status $bytes_sent $bytes_received '
+                                        '$session_time';
+	proxy_connect_timeout   90;
 	include /etc/nginx/streams/*;
+}
+
