--- a/nginx/tests/streams/proxy_to_docker.conf
+++ b/nginx/tests/streams/proxy_to_docker.conf
@@ -1,10 +1,10 @@
-stream {
 upstream test1 {
 	server 192.168.0.65:80;
 	}
 server {
 	listen 80;
+	access_log	/data/nginx/logs/proxy.log basic;
 	proxy_pass test1;
 }
-}
+
 
