added working sentry docker with https

--- a/sentry-docker/.env
+++ b/sentry-docker/.env
@@ -1,15 +1,16 @@
 COMPOSE_PROJECT_NAME=sentry-self-hosted
 SENTRY_EVENT_RETENTION_DAYS=90
+# You can either use a port number or an IP:PORT combo for SENTRY_BIND
+# See https://docs.docker.com/compose/compose-file/#ports for more
 SENTRY_BIND=9000
-SENTRY_IMAGE=getsentry/sentry:nightly
-SNUBA_IMAGE=getsentry/snuba:nightly
-RELAY_IMAGE=getsentry/relay:nightly
-SYMBOLICATOR_IMAGE=getsentry/symbolicator:nightly
+# Set SENTRY_MAIL_HOST to a valid FQDN (host/domain name) to be able to send emails!
+# SENTRY_MAIL_HOST=example.com
+SENTRY_IMAGE=getsentry/sentry:22.11.0
+SNUBA_IMAGE=getsentry/snuba:22.11.0
+RELAY_IMAGE=getsentry/relay:22.11.0
+SYMBOLICATOR_IMAGE=getsentry/symbolicator:0.5.1
 WAL2JSON_VERSION=latest
 HEALTHCHECK_INTERVAL=30s
 HEALTHCHECK_TIMEOUT=60s
 HEALTHCHECK_RETRIES=10
-POSTGRES_USER=
-POSTGRES_DB=
-POSTGRES_PASSWORD=
-REPORT_SELF_HOSTED_ISSUES=0
+SENTRY_USE_SSL = 1
