--- a/rocket_chat/jitsi_meet/docker-compose.yml
+++ b/rocket_chat/jitsi_meet/docker-compose.yml
@@ -321,6 +321,48 @@ services:
             - prosody
         networks:
             meet.jitsi:
+    # Video bridge-2
+    jvb-2:
+        image: jitsi/jvb:${JITSI_IMAGE_VERSION:-stable-7439}
+        restart: ${RESTART_POLICY:-unless-stopped}
+        ports:
+            - '10001:10001/udp'
+            - '127.0.0.1:8081:8081'
+        volumes:
+            - ${CONFIG}/jvb:/config:Z
+        environment:
+            - DOCKER_HOST_ADDRESS
+            - ENABLE_COLIBRI_WEBSOCKET
+            - ENABLE_OCTO
+            - ENABLE_MULTI_STREAM
+            - JVB_AUTH_USER
+            - JVB_AUTH_PASSWORD
+            - JVB_BREWERY_MUC
+            - JVB_DISABLE_STUN
+            - JVB_PORT
+            - JVB_MUC_NICKNAME
+            - JVB_STUN_SERVERS
+            - JVB_OCTO_BIND_ADDRESS
+            - JVB_OCTO_PUBLIC_ADDRESS
+            - JVB_OCTO_BIND_PORT
+            - JVB_OCTO_REGION
+            - JVB_WS_DOMAIN
+            - JVB_WS_SERVER_ID
+            - PUBLIC_URL
+            - SENTRY_DSN="${JVB_SENTRY_DSN:-0}"
+            - SENTRY_ENVIRONMENT
+            - SENTRY_RELEASE
+            - COLIBRI_REST_ENABLED
+            - SHUTDOWN_REST_ENABLED
+            - TZ
+            - XMPP_AUTH_DOMAIN
+            - XMPP_INTERNAL_MUC_DOMAIN
+            - XMPP_SERVER
+            - XMPP_PORT
+        depends_on:
+            - prosody
+        networks:
+            meet.jitsi:
 # Custom network so all services can communicate using a FQDN
 networks:
     meet.jitsi:
