--- a/rocket_chat/jitsi_meet/.env
+++ b/rocket_chat/jitsi_meet/.env
@@ -15,31 +15,35 @@
 # Basic configuration options
 #
 
+
+# Bridges config
+# JVB-2
+#JVB_PORT=10001
+
 # Directory where all configuration will be stored
-#CONFIG=/data/docker/compose/docker-jitsi-meet-stable-8218/configs/.jitsi-meet-cfg
-CONFIG=/data/docker/compose/docker-jitsi-meet-stable-7439/configs/.jitsi-meet-cfg
+CONFIG=/data/docker-compose/jitsi/configs/.jitsi-meet-cfg
 
 # Exposed HTTP port
 #HTTP_PORT=8000
 HTTP_PORT=80
 
 # Exposed HTTPS port
-#HTTPS_PORT=8443
-HTTPS_PORT=443
+#HTTPS_PORT=443
+HTTPS_PORT=30500
 
 # System time zone
 TZ=UTC
 
 # Public URL for the web service (required)
 #PUBLIC_URL=https://192.168.1.129:8443/
-PUBLIC_URL=* #https://name.domain.com
+PUBLIC_URL=https://ip:port
 #ENABLE_XMPP_WEBSOCKET=0
 # Media IP addresses to advertise by the JVB
 # This setting deprecates DOCKER_HOST_ADDRESS, and supports a comma separated list of IPs
 # See the "Running behind NAT or on a LAN environment" section in the Handbook:
 # https://jitsi.github.io/handbook/docs/devops-guide/devops-guide-docker#running-behind-nat-or-on-a-lan-environment
-#JVB_ADVERTISE_IPS=192.168.1.1,1.2.3.4
-DOCKER_HOST_ADDRESS=* #docker host addr
+#JVB_ADVERTISE_IPS=80.89.144.194
+DOCKER_HOST_ADDRESS=1.1.1.1
 
 #
 # JaaS Components (beta)
@@ -128,10 +132,10 @@ AUTH_TYPE=jwt
 #
 
 # Application identifier
-JWT_APP_ID=rocket_jitsi
+JWT_APP_ID=
 
 # Application secret known only to your token generator
-JWT_APP_SECRET=* #make ur secret by urself
+JWT_APP_SECRET=
 
 #JWT_ENABLE_DOMAIN_VERIFICATION=0
 # (Optional) Set asap_accepted_issuers as a comma separated list
@@ -197,19 +201,19 @@ JWT_APP_SECRET=* #make ur secret by urself
 #
 
 # XMPP password for Jicofo client connections
-JICOFO_AUTH_PASSWORD=*
+JICOFO_AUTH_PASSWORD=
 
 # XMPP password for JVB client connections
-JVB_AUTH_PASSWORD=*
+JVB_AUTH_PASSWORD=
 
 # XMPP password for Jigasi MUC client connections
-JIGASI_XMPP_PASSWORD=*
+JIGASI_XMPP_PASSWORD=
 
 # XMPP recorder password for Jibri client connections
-JIBRI_RECORDER_PASSWORD=*
+JIBRI_RECORDER_PASSWORD=
 
 # XMPP password for Jibri client connections
-JIBRI_XMPP_PASSWORD=*
+JIBRI_XMPP_PASSWORD=
 #
 # Docker Compose options
 #
