--- a/rocket_chat/jitsi_meet/bridge2/docker-compose.yml
+++ b/rocket_chat/jitsi_meet/bridge2/docker-compose.yml
@@ -1,53 +1,33 @@
+
 version: '3.5'
- 
 services:
-    # Video bridge
-    jvb:
-        image: jitsi/jvb:${JITSI_IMAGE_VERSION:-stable-7439}
-        container_name: docker-jitsi-meet-stable-7439_jvb_2
-        restart: ${RESTART_POLICY:-unless-stopped}
-        ports:
-            - '${JVB_PORT}:16000/udp'
-            - '${JVB_TCP_MAPPED_PORT}:${JVB_TCP_PORT}'
-        volumes:
-            - ${CONFIG}/jvb:/config:Z
-        environment:
-            - DOCKER_HOST_ADDRESS
-            - ENABLE_COLIBRI_WEBSOCKET
-            - ENABLE_OCTO
-            - ENABLE_MULTI_STREAM
-            - JVB_AUTH_USER
-            - JVB_AUTH_PASSWORD
-            - JVB_BREWERY_MUC
-            - JVB_DISABLE_STUN
-            - JVB_PORT
-            - JVB_MUC_NICKNAME
-            - JVB_STUN_SERVERS
-            - JVB_OCTO_BIND_ADDRESS
-            - JVB_OCTO_PUBLIC_ADDRESS
-            - JVB_OCTO_BIND_PORT
-            - JVB_OCTO_REGION
-            - JVB_WS_DOMAIN
-            - JVB_WS_SERVER_ID
-            - PUBLIC_URL
-            - SENTRY_DSN="${JVB_SENTRY_DSN:-0}"
-            - SENTRY_ENVIRONMENT
-            - SENTRY_RELEASE
-            - COLIBRI_REST_ENABLED
-            - SHUTDOWN_REST_ENABLED
-            - TZ
-            - XMPP_AUTH_DOMAIN
-            - XMPP_INTERNAL_MUC_DOMAIN
-            - XMPP_SERVER
-            - XMPP_PORT
-        networks:
-            - meet.jitsi
-                #meet.jitsi:
- 
- 
-# Custom network so all services can communicate using a FQDN
+    # Video bridge -2
+  jvb2:
+    image: jitsi/jvb:${JITSI_IMAGE_VERSION:-stable-7439}
+    container_name:  jitsi_jvb_2
+    restart: ${RESTART_POLICY:-unless-stopped}
+    ports:
+      - '${JVB_PORT}:${JVB_PORT}/udp'
+      - '8081:8081'
+    volumes:
+      - ${CONFIG}/jvb:/config:Z
+    environment:
+    - DOCKER_HOST_ADDRESS
+    - XMPP_AUTH_DOMAIN
+    - XMPP_INTERNAL_MUC_DOMAIN
+    - XMPP_SERVER
+    - JVB_AUTH_USER
+    - JVB_AUTH_PASSWORD
+    - JVB_BREWERY_MUC
+    - JVB_PORT
+    - JVB_TCP_HARVESTER_DISABLED
+    - JVB_TCP_PORT
+    - JVB_STUN_SERVERS
+    - JVB_ENABLE_APIS
+    - TZ
+    networks:
+      meet.jitsi:
+
 networks:
     meet.jitsi:
         name: jitsi-network
-
-
